[package]
name = "crusti_g2io"
authors = ["Emmanuel Lonca <lonca@cril.fr>"]
version = "0.1.0"
edition = "2021"
description = "A Graph Generator following an Inner/Outer pattern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crusti_g2io"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
crusti_app_helper = {path = "local_crates/crusti_app_helper-v0.1"}
petgraph = "0.6.2"
petgraph-gen = "0.1.3"
petgraph-graphml = "3.0.0"
rand = "0.8.5"
